Cacti CHANGELOG

1.1.11
issue: date_format(): fix date separator character
issue: host.php: fix itemCount en rowCount when result = null

1.1.10
-issue#779: Resolve random apache segfault due to recursion
-issue#786: Unable to create second RRA for a Data Source Profile with collection rate less than 5 minutes
-issue#789: Unable to Clear Filter due to JavaScrpt name space collision
-issue#791: cacti 1.1.9 and clog_webapi.php permission issue
-issue#794: SQL Error when creating graphs manually
-issue#798: Cosmetic issue when checking checkboxes in Cacti
-issue#800: Unchecked loop in lib/html_utility.php causing race condition
-issue#802: Issue updating device hostname with SNMP data queries
-issue#803: Issues with utf8mb4 introduced via optimization
-issue: If the device is down and snmp_sysUpTimeInstance is 0, time in state can be wrong
-feature: Updated Dutch translations

1.1.9
-issue#788: Fails on PHP Fatal error if LDAP auth enabled

1.1.8
-issue#529: Issue on Graph New page with checkbox unselected
-issue#552: Minor selectable row checkbox issue
-issue#577: Dragging multiple items causes the tree to refresh too early
-issue#617: Correct poller timeouts when no devices are associated with active data collector
-issue#706: Classic external link template images missing
-issue#726: Undefined variable in upgrade script
-issue#728: Resolve issues with jQueryUI empty dialogs
-issue#731: Add class to radio button labels to correct display issue
-issue#736: Sequence numbers not visible when editing templates using modern theme
-issue#739: Graph Titles missing on aggregate graphs
-issue#740: Spacer manipulation broken after update to responsive forms
-issue#741: Errors in dsstats with very large RRDfiles with more than 60 data sources
-issue#748: Search results are not cleared on Aggregates
-issue#754: Default Language for user and system are not set on new installation
-issue#755: RRDtool Graph Watermark is incorrect
-issue#756: Resolving some translation issues