@@ -3,6 +3,8 @@ Cacti CHANGELOG
 1.1.11
 issue: date_format(): fix date separator character
 issue: host.php: fix itemCount en rowCount when result = null
+issue: clog: fix scandir for systems with limited permissions to log directory
+issue: clog: fix listing of logfiles
 
 1.1.10
 -issue#779: Resolve random apache segfault due to recursion
